# colorflood

./: .gitignore  CMakeLists.txt  CREDITS  README
colorflood/: CMakeLists.txt  README
colorflood/debian/: changelog  dirs
colorflood/src/: CMakeLists.txt  board.cpp  button.hpp  buttongroup.hpp  colorbutton.cpp  colorbutton.hpp  colorbuttons.cpp  colorbuttons.hpp  colorflood.qm  colorflood.qrc  colorflood.ts  colorscheme.cpp  colorscheme.hpp  field.cpp  field.hpp  main.cpp  scheme.hpp  window.cpp  window.hpp
colorflood/src/resources/: colorflood.ts
debian/: changelog  control  copyright  rules
src/: CMakeLists.txt  board.cpp  board.hpp  button.cpp  button.hpp  buttongroup.cpp  buttongroup.hpp  fullscreenexitbutton.hpp  fullscreentogglebutton.hpp  main.cpp  scheme.cpp  scheme.hpp  window.cpp  window.hpp
src/resources/: colorflood.desktop  colorflood.qm  colorflood.qrc  colorflood.ts
src/resources/tr/: de_DE.qm  de_DE.ts  ru_RU.qm  ru_RU.ts
